<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick</name>
  <version>0.1.0</version>
  <description>Joystick driver node for teleoperation/autonomy arbitration.</description>
  <maintainer email="amrl_robot@cs.utexas.edu">amrl_robot</maintainer>
  <license>LGPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>config_reader</depend>
  <depend>gflags</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>amrl_shared_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
